<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activityes.MainActivity">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnMulti"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/top_button_bg"
                android:text="@string/multi_button"
                android:textAllCaps="false"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/_15ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCity"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/top_button_bg"
                android:text="@string/countries_cities"
                android:textAllCaps="false"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/_15ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnScrolling"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/top_button_bg"
                android:text="@string/scrolling_screen"
                android:textAllCaps="false"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/_14ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/top_button_bg"
                android:text="@string/login_screen"
                android:textAllCaps="false"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/_15ssp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCalculator"
                android:layout_width="@dimen/_180sdp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/top_button_bg"
                android:text="@string/calculator"
                android:textAllCaps="false"
                android:textColor="@color/text_button_color"
                android:textSize="@dimen/_15ssp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>