<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCatTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/_22ssp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAnimal"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_25sdp"
            android:src="@drawable/ic_bald_eagle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCatalogDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:includeFontPadding="false"
            android:text="@string/desc1"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/_20ssp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoBack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_38sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/submit_button_bg"
            android:foreground="?attr/selectableItemBackground"
            android:gravity="center"
            android:text="@string/go_back"
            android:visibility="gone"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/text_button_color"
            android:textSize="@dimen/_22ssp"
            android:layout_marginBottom="@dimen/_30sdp"
            tools:ignore="UnusedAttribute" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>